Fixed positions and publications page alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -475,7 +475,7 @@ footer.sticky-bottom {
     padding-top: 1rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
-    text-align: center;
+    text-align: right;
   }
   ol.bibliography {
     list-style: none;
